name:              hcluster
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable hcluster
  main-is:         Main.hs
  hs-source-dirs:  src
  ghc-options:     -threaded
                   -rtsopts
                   -prof
                   -auto-all
                   -caf-all
  build-depends:   base, vector, containers, directory, timeit, gnuplot

